pipeline/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: servletsamplewar
  name: servletsamplewar
spec:
  type: NodePort
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: servletsamplewar
