pipeline/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: servletsamplewar
  name: servletsamplewar
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: servletsamplewar
    weight: 100
